// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateOSDForm; should render 1`] = `
<Fragment>
  <GridItem
    span={12}
  >
    <Title
      headingLevel="h3"
    >
      Billing model
    </Title>
  </GridItem>
  <Connect(BillingModelSection)
    billingModel="standard"
    byocSelected={false}
    change={[MockFunction]}
    cloudProviderID="aws"
    openModal={[MockFunction]}
    pending={false}
    product="OSD"
    toggleBYOCFields={[Function]}
    toggleSubscriptionBilling={[Function]}
  />
  <GridItem
    span={12}
  >
    <Title
      headingLevel="h3"
    >
      Cluster details
    </Title>
  </GridItem>
  <Connect(BasicFieldsSection)
    billingModel="standard"
    change={[MockFunction]}
    cloudProviderID="aws"
    handleMultiAZChangeForOldForm={[Function]}
    isBYOC={false}
    isMultiAz={false}
    pending={false}
    product="OSD"
    showAvailability={true}
    showDNSBaseDomain={false}
  />
  <GridItem
    span={12}
  >
    <Title
      headingLevel="h3"
    >
      Scale
    </Title>
    <p>
      The number and instance type of worker nodes in your cluster. After cluster creation you will be able to change the number of worker nodes in your cluster, but you will not be able to change the worker node instance type.
    </p>
  </GridItem>
  <ScaleSection
    autoScaleMaxNodesValue="0"
    autoScaleMinNodesValue="0"
    autoscalingEnabled={false}
    billingModel="standard"
    canAutoScale={false}
    change={[MockFunction]}
    cloudProviderID="aws"
    handleMachineTypesChange={[Function]}
    isBYOC={false}
    isMultiAz={false}
    machineType=""
    pending={false}
    product="OSD"
  />
  <NetworkingSection
    cloudProviderID="aws"
    isCCS={false}
    isMultiAz={false}
    mode="basic"
    privateClusterSelected={false}
    showClusterPrivacy={true}
    toggleNetwork={[Function]}
  />
  <GridItem
    span={12}
  >
    <Title
      headingLevel="h3"
    >
      Encryption
    </Title>
  </GridItem>
  <FormGroup
    fieldId="etcd_encryption"
    id="etcdEncryption"
  >
    <Field
      component={[Function]}
      extendedHelpText={
        <React.Fragment>
          When you enable etcd encryption, encryption keys are created. These keys are rotated on a weekly basis.
           
          <ExternalLink
            href="https://docs.openshift.com/container-platform/latest/security/encrypting-etcd.html"
          >
            Learn more about etcd
          </ExternalLink>
        </React.Fragment>
      }
      label="Enable etcd encryption"
      name="etcd_encryption"
    />
    <div
      className="ocm-c--reduxcheckbox-description"
    >
      Provide an additional layer of data security to your cluster.
    </div>
  </FormGroup>
  <GridItem
    span={12}
  >
    <Divider />
  </GridItem>
  <GridItem>
    <Title
      headingLevel="h3"
    >
      Cluster settings
    </Title>
  </GridItem>
  <UserWorkloadMonitoringSection
    disableUVM={false}
    parent="create"
  />
  <Title
    className="clusterupdatespace"
    headingLevel="h3"
  >
    Cluster updates
  </Title>
  <UpgradeSettingsFields
    isDisabled={false}
  />
</Fragment>
`;

exports[`CreateOSDForm; should render OSDTrial with availability zone 1`] = `
<Fragment>
  <GridItem
    span={12}
  >
    <Title
      headingLevel="h3"
    >
      Billing model
    </Title>
  </GridItem>
  <Connect(BillingModelSection)
    billingModel="standard"
    byocSelected={false}
    change={[MockFunction]}
    cloudProviderID="aws"
    openModal={[MockFunction]}
    pending={false}
    product="OSDTrial"
    toggleBYOCFields={[Function]}
    toggleSubscriptionBilling={[Function]}
  />
  <GridItem
    span={12}
  >
    <Title
      headingLevel="h3"
    >
      Cluster details
    </Title>
  </GridItem>
  <Connect(BasicFieldsSection)
    billingModel="standard"
    change={[MockFunction]}
    cloudProviderID="aws"
    handleMultiAZChangeForOldForm={[Function]}
    isBYOC={false}
    isMultiAz={false}
    pending={false}
    product="OSDTrial"
    showAvailability={true}
    showDNSBaseDomain={false}
  />
  <GridItem
    span={12}
  >
    <Title
      headingLevel="h3"
    >
      Scale
    </Title>
    <p>
      The number and instance type of worker nodes in your cluster. After cluster creation you will be able to change the number of worker nodes in your cluster, but you will not be able to change the worker node instance type.
    </p>
  </GridItem>
  <ScaleSection
    autoScaleMaxNodesValue="0"
    autoScaleMinNodesValue="0"
    autoscalingEnabled={false}
    billingModel="standard"
    canAutoScale={false}
    change={[MockFunction]}
    cloudProviderID="aws"
    handleMachineTypesChange={[Function]}
    isBYOC={false}
    isMultiAz={false}
    machineType=""
    pending={false}
    product="OSDTrial"
  />
  <NetworkingSection
    cloudProviderID="aws"
    isCCS={false}
    isMultiAz={false}
    mode="basic"
    privateClusterSelected={false}
    showClusterPrivacy={true}
    toggleNetwork={[Function]}
  />
  <GridItem
    span={12}
  >
    <Title
      headingLevel="h3"
    >
      Encryption
    </Title>
  </GridItem>
  <FormGroup
    fieldId="etcd_encryption"
    id="etcdEncryption"
  >
    <Field
      component={[Function]}
      extendedHelpText={
        <React.Fragment>
          When you enable etcd encryption, encryption keys are created. These keys are rotated on a weekly basis.
           
          <ExternalLink
            href="https://docs.openshift.com/container-platform/latest/security/encrypting-etcd.html"
          >
            Learn more about etcd
          </ExternalLink>
        </React.Fragment>
      }
      label="Enable etcd encryption"
      name="etcd_encryption"
    />
    <div
      className="ocm-c--reduxcheckbox-description"
    >
      Provide an additional layer of data security to your cluster.
    </div>
  </FormGroup>
  <GridItem
    span={12}
  >
    <Divider />
  </GridItem>
  <GridItem>
    <Title
      headingLevel="h3"
    >
      Cluster settings
    </Title>
  </GridItem>
  <UserWorkloadMonitoringSection
    disableUVM={false}
    parent="create"
  />
  <Title
    className="clusterupdatespace"
    headingLevel="h3"
  >
    Cluster updates
  </Title>
  <UpgradeSettingsFields
    isDisabled={false}
  />
</Fragment>
`;
